Connect config dialog to other modules

--- a/contanki/config.json
+++ b/contanki/config.json
@@ -1,489 +1,19 @@
 {
-    "options":{
-        "flags": [1, 2, 3, 4, 5, 6, 7],
-        "unsupported controllers": "False", 
-        "poll rate": 50 
-    },
-
-    "mappings": {
-
-        "all": {
-
-            "Cross": "Enter", 
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "Back",
-            "R1": "Forward",
-            "Share": "Fullscreen",
-            "Options": "Options",
-            "D-Pad Up": "Undo",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "Click",
-            "Left Stick": "Select",
-            "PS": "",
-            "Pad": "Sync",
-
-            "L2 + Right Stick": "Secondary Click",
-
-            "R2 + Right Stick": "Hide Cursor",
-            "R2 + Left Stick": "",
-            "R2 + PS": "Quit",
-            "R2 + Pad": ""
-            },
-        
-        "review": {
-
-            "Cross": "Enter", 
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "Replay Audio",
-            "D-Pad Left": "Flag",
-            "D-Pad Right": "Show Hint",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "Bury Card",
-            "L2 + Circle": "Bury Note",
-            "L2 + Square": "Suspend Note",
-            "L2 + Triangle": "Suspend Card",
-            "L2 + Share": "Edit Note",
-            "L2 + Options": "Set Due Date",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "Mark Note",
-            "L2 + D-Pad Right": "Delete Note",
-            "L2 + Right Stick": "Secondary Click",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "Record Voice",
-            "R2 + Circle": "Replay Voice",
-            "R2 + Square": "Pause Audio",
-            "R2 + Triangle": "Card Info",
-            "R2 + Options": "Previous Card Info",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "Volume Up",
-            "R2 + D-Pad Down": "Volume Down",
-            "R2 + D-Pad Left": "Audio -5s",
-            "R2 + D-Pad Right": "Audio +5s",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-            },
-
-        "question": {
-
-            "Cross": "", 
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-            },
-        
-        "answer": {
-
-            "Cross": "Good", 
-            "Circle": "Again",
-            "Square": "Hard",
-            "Triangle": "Easy",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-        
-        "deckBrowser": {
-
-            "Cross": "Enter",
-            "Circle": "Collapse/Expand",
-            "Square": "Browser",
-            "Triangle": "Statistics",
-            "L1": "Undo",
-            "R1": "Forward",
-            "Share": "Fullscreen",
-            "Options": "Options",
-            "D-Pad Up": "Previous Deck",
-            "D-Pad Down": "Next Deck",
-            "D-Pad Left": "Previous Due Deck",
-            "D-Pad Right": "Next Due Deck",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "Sync",
-
-            "L2 + Cross": "Study Deck",
-            "L2 + Circle": "Add",
-            "L2 + Square": "Filter",
-            "L2 + Triangle": "Switch Profile",
-            "L2 + Share": "Help",
-            "L2 + Options": "Preferences",
-            "L2 + D-Pad Up": "Undo",
-            "L2 + D-Pad Down": "Redo",
-            "L2 + D-Pad Left": "Empty",
-            "L2 + D-Pad Right": "Rebuild",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "About Anki",
-
-            "R2 + Cross": "Check Database",
-            "R2 + Circle": "Check Media",
-            "R2 + Square": "Empty Cards",
-            "R2 + Triangle": "Manage Note Types",
-            "R2 + Options": "Anki Help",
-            "R2 + Share": "Menubar",
-            "R2 + D-Pad Up": "Volume Up",
-            "R2 + D-Pad Down": "Volume Down",
-            "R2 + D-Pad Left": "Import",
-            "R2 + D-Pad Right": "Export",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-        
-        "overview": {
-        
-            "Cross": "Enter", 
-            "Circle": "Custom Study",
-            "Square": "Browser",
-            "Triangle": "Statistics",
-            "L1": "Back",
-            "R1": "Forward",
-            "Share": "Fullscreen",
-            "Options": "Options",
-            "D-Pad Up": "Previous Deck",
-            "D-Pad Down": "Next Deck",
-            "D-Pad Left": "Previous Due Deck",
-            "D-Pad Right": "Next Due Deck",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "Description",
-            "L2 + Circle": "Add",
-            "L2 + Square": "Filter",
-            "L2 + Triangle": "Switch Profile",
-            "L2 + Share": "Help",
-            "L2 + Options": "Preferences",
-            "L2 + D-Pad Up": "Undo",
-            "L2 + D-Pad Down": "Redo",
-            "L2 + D-Pad Left": "Empty",
-            "L2 + D-Pad Right": "Rebuild",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "About Anki",
-
-            "R2 + Cross": "Check Database",
-            "R2 + Circle": "Check Media",
-            "R2 + Square": "Empty Cards",
-            "R2 + Triangle": "Manage Note Types",
-            "R2 + Options": "Anki Help",
-            "R2 + Share": "Menubar",
-            "R2 + D-Pad Up": "Volume Up",
-            "R2 + D-Pad Down": "Volume Down",
-            "R2 + D-Pad Left": "Import",
-            "R2 + D-Pad Right": "Export",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": "Quit"
-        },
-        
-        "stats": {
-
-            "Cross":"", 
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        
-        },
-
-        "profileManager": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-
-        },
-
-        "startup": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-
-        "dialog": {
-
-            "Cross": "Select",
-            "Circle": "Secondary Select",
-            "Square": "",
-            "Triangle": "",
-            "L1": "Escape",
-            "R1": "Switch Window",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "Up",
-            "D-Pad Down": "Down",
-            "D-Pad Left": "Select Previous",
-            "D-Pad Right": "Select Next",
-            "Right Stick": "Click",
-            "Left Stick": "Select",
-            "PS": "Escape",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "Scroll Up",
-            "L2 + D-Pad Down": "Scroll Down",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "Secondary Click",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "Secondary Select",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        }
+    "Flags": [1, 2, 3, 4, 5, 6, 7],
+    "Enable Overlays": true,
+    "Enable Tooltips": false,
+    "Enable Dialog Access": true,
+    "Enable Incompatible Controllers": false,
+    "Scroll Speed": 50,
+    "Cursor Speed": 50,
+    "Cursor Acceleration": 50,
+    "Polling Rate": 50,
+    
+    "Custom Actions": {
+        "Show Hint": "H",
+        "AwesomeTTS": "Ctrl+T"
     }
+     
 }
+
+    
