Implement cursor deadzone setting and add deadzone to scrolling

--- a/contanki/config.json
+++ b/contanki/config.json
@@ -5,6 +5,7 @@
     "Scroll Speed": 10,
     "Cursor Speed": 10,
     "Cursor Acceleration": 10,
+    "Stick Deadzone": 5,
     
     "Custom Actions": {
         "AwesomeTTS": "Ctrl+T"
