Give up on auto-detecting 8BitDo controllers

--- a/contanki/config.json
+++ b/contanki/config.json
@@ -8,6 +8,7 @@
     "Large Overlays": false,
     "Overlays Always On": false,
     "Overlays in Quick Select": true,
+    "Detect 8BitDo Controllers": false,
 
     "Custom Actions": {
         "AwesomeTTS": "Ctrl+T"
