--- a/contanki/manifest.json
+++ b/contanki/manifest.json
@@ -2,6 +2,6 @@
     "package": "contanki",
     "name": "Contanki - Controller Support",
     "author": "Sam Bradshaw",
-    "human_version": "v0.11.5-beta",
+    "human_version": "v1.0",
     "homepage": "https://github.com/roxgib/anki-contanki"
 }
